admission-controller/kubernetes-manifests/register.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: "admission"
webhooks:
- name: "example-policy.example.com"
  reinvocationPolicy: IfNeeded
  rules:
  - apiGroups:   [""]
    apiVersions: ["v1"]
    operations:  ["CREATE"]
    resources:   ["pods"]
    scope:       "Namespaced"
  failurePolicy: Ignore
  namespaceSelector:
    matchLabels:
      secrets.k8s.aws/sidecarInjectorWebhook: enabled
  clientConfig:
    service:
      namespace: "default"
      name: "test-admission"
      path: "/mutating-pods"
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURNVENDQWhtZ0F3SUJBZ0lKQUtkVDFvR3orRTNlTUEwR0NTcUdTSWIzRFFFQkN3VUFNQzh4TFRBckJnTlYKQkFNTUpFRmtiV2x6YzJsdmJpQkRiMjUwY205c2JHVnlJRmRsWW1odmIyc2dSR1Z0YnlCRFFUQWVGdzB5TURBMApNRFl3TWpRMU5UTmFGdzB5TURBMU1EWXdNalExTlROYU1DOHhMVEFyQmdOVkJBTU1KRUZrYldsemMybHZiaUJECmIyNTBjbTlzYkdWeUlGZGxZbWh2YjJzZ1JHVnRieUJEUVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVAKQURDQ0FRb0NnZ0VCQU5XMVdjV3BHclJNNW5yUnFEYk9JT29MaVRxRW5CTUUzT0FNMmFON2w2bktPSHU2L2FEUwpqUVR1NnNPYmxyd [...]
  admissionReviewVersions: ["v1beta1"]
  timeoutSeconds: 5
